# pngcheck

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  CMakePresets.json  Gemfile  INSTALL.md  LICENSE  Makefile  Makefile.mingw  Makefile.mingw32  Makefile.mingw64  Makefile.riscos  Makefile.unx  Makefile.w32  README  README.md  TESTING.md  matrix-makefile.json  matrix.json  pngcheck.1  pngcheck.c  pngcheck.txt  project.yml
.github/workflows/: build-makefile.yml  build.yml  matrix.json  release.yml
amiga/: README.Amiga
gpl/: pngsplit.c
test/: CMakeLists.txt  README.md  project.yml
test/lib/: pngcheck_test.rb
test/lib/pngcheck_test/: cli.rb  version.rb
test/lib/pngcheck_test/models/: png_suite.rb  pngcheck.rb  repository.rb  test_generator.rb
test/lib/pngcheck_test/templates/: test_suite.c.liquid
test/test/: test_pngcheck_cli.c  test_pngcheck_suite.c
test/test/support/: test_helpers.c  test_helpers.h
tests/: README.md  generate_expectations.sh  generate_test_cases.sh  run_tests.sh  test_pngcheck_cli.bats  test_pngcheck_suite.bats
tests/expectations/pngsuite/: PngSuite.png.out  basi0g01.png.out  basi0g02.png.out  basi0g04.png.out  basi0g08.png.out  basi0g16.png.out  basi2c08.png.out  basi2c16.png.out  basi3p01.png.out  basi3p02.png.out  basi3p04.png.out  basi3p08.png.out  basi4a08.png.out  basi4a16.png.out  basi6a08.png.out  basi6a16.png.out  basn0g01.png.out  basn0g02.png.out  basn0g04.png.out  basn0g08.png.out  basn0g16.png.out  basn2c08.png.out  basn2c16.png.out  basn3p01.png.out  basn3p02.png.out  basn3p04.png.out  basn3p08.png.out  basn4a08.png.out  basn4a16.png.out  basn6a08.png.out  basn6a16.png.out  bgai4a08.png.out  bgai4a16.png.out  bgan6a08.png.out  bgan6a16.png.out  bgbn4a08.png.out  bggn4a16.png.out  bgwn6a08.png.out  bgyn6a16.png.out  ccwn2c08.png.out  (+136 more)
tests/helpers/: test_helpers.bash
